@@ -1,10 +1,23 @@
 ;;; quick-window.el --- Quickly jump to a window -*- lexical-binding: t -*-
-;; Copyright © 2024 Zhengyi Fu <i@fuzy.me>
+;; Copyright © 2024, 2025 Zhengyi Fu <i@fuzy.me>
 
 ;; Author:  Zhengyi Fu
 ;; Package-Requires: ((emacs "29.4") (popon "0.13"))
 ;; Version: 0.2.0
 ;; Keywords: navigation
+
+;; This program is free software: you can redistribute it and/or modify
+;; it under the terms of the GNU General Public License as published by
+;; the Free Software Foundation, either version 3 of the License, or
+;; (at your option) any later version.
+
+;; This program is distributed in the hope that it will be useful,
+;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+
+;; You should have received a copy of the GNU General Public License
+;; along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 ;;; Commentary:
 ;;; Code:
